--- a/about-us.html
+++ b/about-us.html
@@ -17,8 +17,8 @@
     <div w3-include-html="./assets/template/navbar.html"></div>
     <div w3-include-html="./assets/template/header.html"></div>  
     <!--discription Charly Tango-->
-    <div class="d-flex justify-around align-center margin-top-30px margin-bottom-30px">
-        <div class="welcome-text txt-center">
+    <div class="d-flex column justify-around align-center margin-top-30px margin-bottom-30px">
+        <div class="welcome-text w-70 txt-center">
             <h2>
                 Wer heute auf CB-Funk DX fährt</br> 
                 und dabei auf das Rufzeichen Charly Tango trifft, weiß <br>
@@ -30,11 +30,11 @@
                 </span>    
             </h2>    
         </div>
-        <img class="" src="./assets/img/13ct-1.png" alt="">
+        <img class="ct13" src="./assets/img/13ct-1.png" alt="">
     </div>
 
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     <div class="welcome-text justify-center d-flex txt-center">
@@ -81,7 +81,7 @@
                 
             </p>
             <p>
-                im Jahr 2000 ist Eberhard Albrecht alias PIT 13CT001<br> 
+                Im Jahr 2000 ist Eberhard Albrecht alias PIT 13CT001<br> 
                 nach schwerer Krankheit im Alter von nur 49 Jahren verstorben.<br>
                 Er war rund um die Uhr für seinen Club und seine Mitglieder zu erreichen !!
             </p>
@@ -89,7 +89,7 @@
     </div>
 
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
     <!--FOOTER-->
     <div w3-include-html="./assets/template/footer.html"></div>
