--- a/cb-betriebsarten.html
+++ b/cb-betriebsarten.html
@@ -20,7 +20,7 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <div class="d-flex w-30 column">
+            <div class="d-flex w-50 column">
                 <p>
                     <strong>
                         In Deutschland sind zugelassen:
@@ -116,7 +116,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
