--- a/cb-mikrofon-belegung.html
+++ b/cb-mikrofon-belegung.html
@@ -21,10 +21,11 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>Mikrofonbelegung CB-Funkeräte</h2>
-            <img class="microphone-assignment margin-top-30px margin-bottom-30px txt-center" src="./assets/img/mike-stecker.gif" alt="">
-            <div class="w-50">
-                <table class="mobile-table">
+            <h2 class="mobile-d-flex d-none">Tabellen sind Mobil nicht verfügbar.<br>
+                schau gerne in der Desktop Version vorbei</h2>
+            <img class="microphone-assignment margin-top-30px margin-bottom-30px txt-center mobile-hide" src="./assets/img/mike-stecker.gif" alt="">
+            <div class="">
+                <table class="mobile-hide">
                     <thead>
                         <tr>
                             <th>Gerätetyp</th>
@@ -45,7 +46,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
