--- a/cb-regeln.html
+++ b/cb-regeln.html
@@ -20,7 +20,7 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     1. Was benötige ich zum Betrieb von CB-Funkgeräten?
                 </h3>
@@ -28,7 +28,7 @@
                     Benötigt wird zusätzlich eine Mobil CB-Funk Antenne mit Anschlusskabel und ein SWR Meter
                 </p>  
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     2. Was benötige ich zum stationären Betrieb von CB-Funkgeräten?
                 </h3>
@@ -37,7 +37,7 @@
                     Anschlusskabel, ein dafür geeignetes Netzgerät 230V / 12 Volt und ein SWR Meter.
                 </p>
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     3. Was ist ein SWR - Meter und wofür wird es benötigt?
                 </h3>
@@ -45,7 +45,7 @@
                     Das SWR – Meter ist ein Antennenmessgerät und wird für die exakte Einstellung der Antenne benötigt.
                 </p>
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     4. Welche Einstellungen sind beim CB Funkgerät zu beachten?
                 </h3>
@@ -54,7 +54,7 @@
                     nehmen Sie dazu die beiliegende Bedienungsanleitung zur Hand.
                 </p>
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     5. Ich werde von anderen CB-Funkstationen nicht gehört?
                 </h3>
@@ -63,7 +63,7 @@
                     und die Antennenanlage mit einem SWR-Meter. Bespreche das Mikrofon nah am Mund.
                 </p>
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     6. Ich höre andere CB-Funkstationen nur sehr schwach?
                 </h3>
@@ -71,7 +71,7 @@
                     Überprüfe die Einstellungen des CB-Funkgerätes (RF-Gain), (DX/Loc. Schalter) gegebenenfalls deine Antennenanlage.
                 </p>
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     7. Ich höre andere CB-Funkstationen nur sehr verzerrt?
                 </h3>
@@ -79,7 +79,7 @@
                     Überprüfe deine Modulations Einstellung des CB-Funkgerätes ( AM / FM ).
                 </p>
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     8. Aus dem Lautsprecher kommt kein Ton? 
                 </h3>
@@ -87,7 +87,7 @@
                     Vermutlich ist das beiliegende Mikrofon nicht am CB-Funkgerät eingesteckt oder der Lautstärkeregler ist zugedreht (Volume)
                 </p>
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     9. Aus dem Lautsprecher ertönt immer Rauschen? 
                 </h3>
@@ -95,7 +95,7 @@
                     Überprüfen Sie die Einstellung ( Squelch )
                 </p>
             </div>
-            <div class="cb-regulate-content w-30">
+            <div class="cb-regulate-content w-50">
                 <h3>
                     10. Ich erhalte keine Reichweite?
                 </h3>
@@ -106,7 +106,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
