--- a/ct-today.html
+++ b/ct-today.html
@@ -20,7 +20,7 @@
     <div w3-include-html="./assets/template/header.html"></div>  
 
 
-<div class="d-flex justify-around align-center margin-top-30px margin-bottom-30px">
+<div class="d-flex column justify-around align-center margin-top-30px margin-bottom-30px">
     <div class="welcome-text w-50 txt-center">
         <h2>
             Im Jahr 2002 ist der Internationale Borderland
@@ -29,8 +29,8 @@
             Ich mache Weiter !!!!!    
         </h2>    
     </div>
-    <div class="d-flex column txt-center">
-        <img class="" src="./assets/img/wolfgangmueller.png" alt="">
+    <div class="d-flex column align-center txt-center">
+        <img class="ct13" src="./assets/img/wolfgangmueller.png" alt="">
         <p>
             <h3>Wolfgang Müller</h3>
             Bissendorf<br>
@@ -41,35 +41,35 @@
 </div>
 
 <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-    <img src="./assets/img/kodax-02.gif" alt="">
+    <img class="cable" src="./assets/img/kodax-02.gif" alt="">
 </div>
 
-<div class="welcome-text txt-center">
-    <p>
-        Der Charly Tango Club wird nicht mehr in das Register eingetragen somit auch kein e.v. werden.<br>
-        Für die Mitglieder wird es keine Verpflichtungen geben.<br>
-        Seit der Wiederbelebung des Clubs sind ca. 120 neue Charly Tango's zu verzeichnen. <br>
-        Ebenso viele "alte" Charly Tango's haben sich gemeldet und mitgeteilt das sie noch aktiv sind.<br>
-        Des weiteren hat sich ein Chalrie Tango Club aus England gemeldet,<br>
-        der allem Anschein nach von dem "alten" Charly Tango DX Group abstammen.<br>
-        Es wird mit den CT's aus England noch Kontakt auf genommen werden,<br>
-        in der Hoffnung das nach dort hin ein näherer Kontakt entsteht.<br>  
-    </p>
-        
-        <h3>Wie bleibe ich auf Lebzeiten eine Charlytango Station ???</h3>
-    <p>    
-        Jede CT Station muss jährlich per Brief, per e mail oder Telefon bei dem CT-Club melden,<br>
-        ob sie noch aktiv ist oder ob sich die Adresse geändert hat.<br>
-        Liegt nach 2 Jahren kein bescheid vor, wird die CT.Nummer weitervergeben!!!!<br>
-        Charly Tango Mitglieder kann man auch über eine sogenannte Funkplattform im Internet finden.<br> 
-        Das Programm hierfür nennt sich Team Speak 3 und das Programm dafür kann man sich runter<br> 
-        laden über den <a href="https://www.teamspeak.de/download/">TS-3 Download-link</a> oder im bereich Download auf der Hauptseite. 
-    </p>      
+<div class="welcome-text d-flex justify-center txt-center">
+    <div class="w-50">
+        <p>
+            Der Charly Tango Club wird nicht mehr in das Register eingetragen somit auch kein e.v. werden.<br>
+            Für die Mitglieder wird es keine Verpflichtungen geben.<br>
+            Seit der Wiederbelebung des Clubs sind ca. 120 neue Charly Tango's zu verzeichnen. <br>
+            Ebenso viele "alte" Charly Tango's haben sich gemeldet und mitgeteilt das sie noch aktiv sind.<br>
+            Des weiteren hat sich ein Chalrie Tango Club aus England gemeldet,<br>
+            der allem Anschein nach von dem "alten" Charly Tango DX Group abstammen.<br>
+            Es wird mit den CT's aus England noch Kontakt auf genommen werden,<br>
+            in der Hoffnung das nach dort hin ein näherer Kontakt entsteht.<br>  
+        </p>
+            
+            <h3>Wie bleibe ich auf Lebzeiten eine Charlytango Station ???</h3>
+        <p>    
+            Jede CT Station muss jährlich per Brief, per e mail oder Telefon bei dem CT-Club melden,<br>
+            ob sie noch aktiv ist oder ob sich die Adresse geändert hat.<br>
+            Liegt nach 2 Jahren kein bescheid vor, wird die CT.Nummer weitervergeben!!!!<br>
+            Charly Tango Mitglieder kann man auch über eine sogenannte Funkplattform im Internet finden.<br> 
+            Das Programm hierfür nennt sich Team Speak 3 und das Programm dafür kann man sich runter<br> 
+            laden über den <a href="https://www.teamspeak.de/download/">TS-3 Download-link</a> oder im bereich Download auf der Hauptseite. 
+        </p>
+    </div>          
 </div>
 
-<div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-    <img src="./assets/img/kodax-02.gif" alt="">
-</div>
+<div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px"></div>
 
 <!--Footer-->
 <div w3-include-html="./assets/template/footer.html"></div>
