--- a/gw-interface.html
+++ b/gw-interface.html
@@ -20,7 +20,9 @@
     <!--Content-->
 
     <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px">
-        <h2>Das PTT Modem ist ganz einfach aufgebaut</h2>
+        <div class="w-50">
+            <h2 class="txt-center">Das PTT Modem ist ganz einfach aufgebaut</h2>
+        </div>    
         <img class="circuit-diagram" src="./assets/img/ptt_ser.gif" alt="">
         <div class="w-50">
             <p class="margin-top-30px">
@@ -54,7 +56,7 @@
     </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
