--- a/hf-stoerungen.html
+++ b/hf-stoerungen.html
@@ -54,7 +54,7 @@
                     Wir alle haben z.B. ein Anrecht auf störungsfreien Rundfunk- und Fernsehempfang. Machen die Funkmesswagen 
                     des BNetzA einen CB-Funker als Störer (durch Oberwellen) ausfindig, so muss dieser natürlich für Abhilfe sorgen. 
                     Dies kann z. B. durch Einfügen eines TVI – Filters in die Antennenleitung erfolgen. Bei der gegenseitigen 
-                    <b>Störung von CB-Funkanlagen untereinande> unterscheidet man Gleichkanal – und Nachbarkanalstörungen.  
+                    Störung von CB-Funkanlagen untereinander unterscheidet man Gleichkanal – und Nachbarkanalstörungen.  
                     Gleichkanalstörungen machen sich häufig durch einen pfeifenden Ton bemerkbar. 
                     Sie entstehen durch gegenseitige Beeinflussung der auf den gleichen Kanal sendenden Funkgeräte, auch über große 
                     Entfernungen. Die modulierten Träger mischen sich (Kreuzmodulation). Nachbarkanalstörungen werden leider oft 
@@ -67,7 +67,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
