--- a/neue-mitglieder.html
+++ b/neue-mitglieder.html
@@ -21,14 +21,16 @@
     <div w3-include-html="./assets/template/header.html"></div>  
     <!--member content-->
     <div class="d-flex w-100 justify-center">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        
     </div>
 
     <div class="d-flex justify-center align-center margin-top-30px margin-bottom-30px">
         <div  class="welcome-text txt-center w-50">
-            <h2>Seit Bekannt ist das es CharlyTango wieder gibt.<br> 
+            <h2 class="mobile-hide">Seit Bekannt ist das es CharlyTango wieder gibt.<br> 
                 Sind folgende Mitglieder NEU dazu gekommen!</h2>
-            <div class="d-flex justify-center">    
+                <h2 class="mobile-d-flex d-none">Tabellen sind Mobil nicht verfügbar.<br>
+                schau gerne in der Desktop Version vorbei</h2>
+            <div class="d-flex justify-center mobile-hide">    
                 <table class="txt-center">
                     <thead>    
                         <tr>
@@ -46,7 +48,6 @@
     </div>
 
     <div class="d-flex w-100 justify-center  margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     <!--Footer-->
