--- a/pmr-mikrofon-belegung.html
+++ b/pmr-mikrofon-belegung.html
@@ -20,242 +20,243 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>
-                PMR / LPD und Freenet Belegung
-            </h2>
-            <h3>
-                Mikrofone mit 2,5/3,5mm Doppelmono-Klinkenstecker
-            </h3>
-            <p>
-                Alan 441, Alan 443, Alan 451, Alan 456, Alan 456R,
-            </p>
-            <p>
-                Albrecht Sporty, Albrecht Sporty-Family 1+2, Albrecht Sporty Pro 69, Albrecht Sporty-Fun,<br>
-                Albrecht Froggy, Albrecht Tectalk Contact, Albrecht Tectalk Action, Albrecht Tectalk Office,<br> 
-                Albrecht Multicom-Pro,  Albrecht Tectalk Pro und Mobil
-            </p>
-            <p>
-                Stabo Flytalk, Stabo XP-400, Stabo XP-500, Stabo Freetalk, Stabo Freetalk-2, Stabo Freetalk-UHF
-            </p>
-            <p>
-                Cobra MT-500, Cobra MT-700, Cobra MT-900
-            </p>
-            <p>
-                KPO MT-2000L, KPO MT-4000L, KPO PB-1000R
-            </p>
-            <p>
-                DNT ProfiTek-77, DNT XP-8, DNT XLP-77, DNT DRS 1000, DNT DRS 2000
-            </p>
-            <p>
-                ICOM IC-4088SR
-            </p>
-            <p>
-                Team MiCo-446
-            </p>
-            <p>
-                Alinco DJ-446E
-            </p>
-            <p>
-                Reer 5000, Reer 5001, Reer 5003, Reer 5004
-            </p>
-            <p>
-                Midland G7, Midland G12, Alan Base 446, Alan HP 446. Alan 445, Alan 42H
-            </p>
+            <div class="w-50">    
+                <h2>
+                    PMR / LPD und Freenet Belegung
+                </h2>
+                <h3>
+                    Mikrofone mit 2,5/3,5mm Doppelmono-Klinkenstecker
+                </h3>
+                <p>
+                    Alan 441, Alan 443, Alan 451, Alan 456, Alan 456R,
+                </p>
+                <p>
+                    Albrecht Sporty, Albrecht Sporty-Family 1+2, Albrecht Sporty Pro 69, Albrecht Sporty-Fun,<br>
+                    Albrecht Froggy, Albrecht Tectalk Contact, Albrecht Tectalk Action, Albrecht Tectalk Office,<br> 
+                    Albrecht Multicom-Pro,  Albrecht Tectalk Pro und Mobil
+                </p>
+                <p>
+                    Stabo Flytalk, Stabo XP-400, Stabo XP-500, Stabo Freetalk, Stabo Freetalk-2, Stabo Freetalk-UHF
+                </p>
+                <p>
+                    Cobra MT-500, Cobra MT-700, Cobra MT-900
+                </p>
+                <p>
+                    KPO MT-2000L, KPO MT-4000L, KPO PB-1000R
+                </p>
+                <p>
+                    DNT ProfiTek-77, DNT XP-8, DNT XLP-77, DNT DRS 1000, DNT DRS 2000
+                </p>
+                <p>
+                    ICOM IC-4088SR
+                </p>
+                <p>
+                    Team MiCo-446
+                </p>
+                <p>
+                    Alinco DJ-446E
+                </p>
+                <p>
+                    Reer 5000, Reer 5001, Reer 5003, Reer 5004
+                </p>
+                <p>
+                    Midland G7, Midland G12, Alan Base 446, Alan HP 446. Alan 445, Alan 42H
+                </p>
 
-            <div class="pmr-img-container">
-                <img src="./assets/img/welcherstecker 4.4.gif" alt="">
-                <img src="./assets/img/welcherstecker 4.1 neu.gif" alt="">
+                <div class="pmr-img-container mobile-hide">
+                    <img src="./assets/img/welcherstecker 4.4.gif" alt="">
+                    <img src="./assets/img/welcherstecker 4.1 neu.gif" alt="">
+                </div>
+
+                <h3>
+                    Mikrofone mit 2,5 Stereo- Klinkenstecker
+                </h3>
+                <p>
+                    Team TR-446 mit Radio, Team UHF-DualTalk, Team UHF-HANDY, Team Messenger 
+                </p>
+                <p>
+                    Alan-421, Alan K1,  Midland G5 R1, Alan 777, Midland G-5
+                </p>
+                <p>
+                    Albrecht Tectalk, Albrecht Tectalk-FM mit UKW-Radio, Albrecht Tectalk-Freestyle,<br> 
+                    Albrecht Tectalk-Joker, Albrecht GP-1 mit GPS-Navigator, Tectalk Smart, Tectalk FM+
+                </p>
+                <p>
+                    Stabo Freecomm-500, Stabo Freecomm-500-FM mit UKW-Radio, Stabo Freecomm-300,<br> 
+                    Stabo XP-300, Stabo Outdoor
+                </p>
+                <p>
+                    DigiCom (z.B. von QVC)
+                </p>
+                <p>
+                    Conrad Pocket-Comm-Starter, Conrad Pocket-Comm-One, Conrad Pocket-Comm-Double,<br> 
+                    Conrad Pocket-Comm-Radio
+                </p>
+                <p>
+                    Binatone MR-600, Bidatong BD 6118,  Bidatong BD 7118 
+                </p>
+                <p>
+                    DNT WT-77 nur Vox, DNT WT-8
+                </p>
+                <div class="pmr-img-container mobile-hide">
+                    <img src="./assets/img/welcherstecker 4.2 neu.gif" alt="">
+                </div>
+
+                <h3>
+                    Mikrofone mit 3,5 Stereo-Klinkenstecker Belegung
+                </h3>
+                <p>
+                    Alan-456 für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage),<br> 
+                    Alan-456R für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage),<br> 
+                    Alan-507, Alan-401
+                </p>
+                <p>
+                    Tevion PMR2003(nur Vox)
+                </p>
+                <p>
+                    Starq (nur Vox)
+                </p>
+                <p>
+                    Twintalker 3000, Twintalker 3500
+                </p>
+                <p>
+                    Cobra MT-700 für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage),<br> 
+                    Cobra MT-900 für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage)
+                </p>
+                <p>
+                    Albrecht Tectalk-Action für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage)
+                </p>
+                <p>
+                    Micro-Electric WT-246 (ohne Gewähr)
+                </p>
+                <p>
+                    DNT TouchCom TC-1
+                </p>
+                <p>
+                    TTI PMR-122TX
+                </p>
+                <p>
+                    Binatone MR100, Binatone MR200, TC-109
+                </p>
+                <p>
+                    DANITA TC-109
+                </p>
+                <p>
+                    Commodore Funpack II, Kombix Rocky
+                </p>
+                <p>
+                    TC-109ER
+                </p>
+                <p>
+                    Zodiac Me2You
+                </p>
+                <p>
+                    Logicom Spider 700
+                </p>
+                <p>
+                    Tevion PMR 2003, Sabaki
+                </p>
+                <div class="pmr-img-container mobile-hide">
+                    <img src="./assets/img/welcherstecker 4.3neu.gif" alt="">
+                </div>
+
+                <h3>
+                    Mikrofone mit 2,5mm Stereo und 3,5mm Mono-Doppelklinkenstecker
+                </h3>
+                <p>
+                    Stabo Freecomm 200, Stabo Freecomm 220, Stabo Flytalk
+                </p>
+                <p>
+                    Team McTalk 446, Team OnAir 446
+                </p>
+                <p>
+                    Danita SP 3380
+                </p>
+                <p>
+                    Commodore Funpack(außer Funpack 1, 2, 3)
+                </p>
+                <p>
+                    Hoffer SP 3380
+                </p>
+                <p>
+                    Busch ProfiTalkie 2
+                </p>
+                <p>
+                    MBO WT 446
+                </p>
+                <p>
+                    DNT Space 100
+                </p>
+                <p>
+                    ELRO WT 02
+                </p>
+                <p>
+                    Reer 6000
+                </p>
+                <p>
+                    Elro WT2
+                </p>
+                <p>
+                    AEG Funky 1, AEG Funky 50
+                </p>
+                <h4>NUR VOX</h4>
+                <p>
+                    Alan 441, 443, 451, 456, 456R
+                </p>
+                <p>
+                    Albrecht Tectalk Action, Tectalk Contact, Multicom Pro
+                </p>
+                <p>
+                    Stabo Flytalk, Freetalk UHF
+                </p>
+                <p>
+                    Cobra MT 700 MT 900
+                </p>
+                <p>
+                    KPO MT 2000L, MT 4000L, PB 1000R
+                </p>
+                <p>
+                    DNT ProfiTek 77, XP 8, XLP 77, DRS 1000, Reer 5000, 5001, 5003, 5004
+                </p>
+                <div class="pmr-img-container mobile-hide">
+                    <img src="./assets/img/welcherstecker 4.2 neu.gif" alt="">
+                    <img src="./assets/img/welcherstecker 4.4.gif" alt="">
+                </div>
+
+                <h3>
+                    Mikrofone mit 2,5mm Mono und 3,5mm Klinkenstecker
+                </h3>
+                <p>
+                    Team PT-3208S(+baugleiche Geräte)
+                </p>
+                <p>
+                    Stabo Freetalk-Pro
+                </p>
+                <p>
+                    Kenwood FunKey UBZ-LH68 LPD, Kenwood FunKey UBZ-LJ8 PMR,<br> 
+                    TK-3201 PMR, TK-3101 PMR, TK-261 Freenet
+                </p>
+                <p>
+                    Bidatong BD PMR A und B, Bidatong BD-3107, Bidatong BD-2107
+                </p>
+
+                <div class="pmr-img-container  mobile-hide">
+                    <img src="./assets/img/welcherstecker 4.1 neu.gif" alt="">
+                    <img src="./assets/img/welcherstecker 4.4.gif" alt="">
+                </div>
+
+                <div>
+                    <a target="_blank" href="https://www.google.com/search?q=europafunker&rlz=1C1CHBF_deDE993DE993&oq=europafunker&aqs=chrome..69i57j0i13i512.615j0j4&sourceid=chrome&ie=UTF-8">
+                        <img class="europa-funk-img mobile-hide" src="./assets/img/welcherstecker 3 neu.gif" alt="">
+                    </a>
+                </div>
             </div>
-
-            <h3>
-                Mikrofone mit 2,5 Stereo- Klinkenstecker
-            </h3>
-            <p>
-                Team TR-446 mit Radio, Team UHF-DualTalk, Team UHF-HANDY, Team Messenger 
-            </p>
-            <p>
-                Alan-421, Alan K1,  Midland G5 R1, Alan 777, Midland G-5
-            </p>
-            <p>
-                Albrecht Tectalk, Albrecht Tectalk-FM mit UKW-Radio, Albrecht Tectalk-Freestyle,<br> 
-                Albrecht Tectalk-Joker, Albrecht GP-1 mit GPS-Navigator, Tectalk Smart, Tectalk FM+
-            </p>
-            <p>
-                Stabo Freecomm-500, Stabo Freecomm-500-FM mit UKW-Radio, Stabo Freecomm-300,<br> 
-                Stabo XP-300, Stabo Outdoor
-            </p>
-            <p>
-                DigiCom (z.B. von QVC)
-            </p>
-            <p>
-                Conrad Pocket-Comm-Starter, Conrad Pocket-Comm-One, Conrad Pocket-Comm-Double,<br> 
-                Conrad Pocket-Comm-Radio
-            </p>
-            <p>
-                Binatone MR-600, Bidatong BD 6118,  Bidatong BD 7118 
-            </p>
-            <p>
-                DNT WT-77 nur Vox, DNT WT-8
-            </p>
-            <div class="pmr-img-container">
-                <img src="./assets/img/welcherstecker 4.2 neu.gif" alt="">
-            </div>
-
-            <h3>
-                Mikrofone mit 3,5 Stereo-Klinkenstecker Belegung
-            </h3>
-            <p>
-                Alan-456 für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage),<br> 
-                Alan-456R für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage),<br> 
-                Alan-507, Alan-401
-            </p>
-            <p>
-                Tevion PMR2003(nur Vox)
-            </p>
-            <p>
-                Starq (nur Vox)
-            </p>
-            <p>
-                Twintalker 3000, Twintalker 3500
-            </p>
-            <p>
-                Cobra MT-700 für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage),<br> 
-                Cobra MT-900 für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage)
-            </p>
-            <p>
-                Albrecht Tectalk-Action für Intercom-Anschlussbuchse (Motorrad-Wechselsprechanlage)
-            </p>
-            <p>
-                Micro-Electric WT-246 (ohne Gewähr)
-            </p>
-            <p>
-                DNT TouchCom TC-1
-            </p>
-            <p>
-                TTI PMR-122TX
-            </p>
-            <p>
-                Binatone MR100, Binatone MR200, TC-109
-            </p>
-            <p>
-                DANITA TC-109
-            </p>
-            <p>
-                Commodore Funpack II, Kombix Rocky
-            </p>
-            <p>
-                TC-109ER
-            </p>
-            <p>
-                Zodiac Me2You
-            </p>
-            <p>
-                Logicom Spider 700
-            </p>
-            <p>
-                Tevion PMR 2003, Sabaki
-            </p>
-            <div class="pmr-img-container">
-                <img src="./assets/img/welcherstecker 4.3neu.gif" alt="">
-            </div>
-
-            <h3>
-                Mikrofone mit 2,5mm Stereo und 3,5mm Mono-Doppelklinkenstecker
-            </h3>
-            <p>
-                Stabo Freecomm 200, Stabo Freecomm 220, Stabo Flytalk
-            </p>
-            <p>
-                Team McTalk 446, Team OnAir 446
-            </p>
-            <p>
-                Danita SP 3380
-            </p>
-            <p>
-                Commodore Funpack(außer Funpack 1, 2, 3)
-            </p>
-            <p>
-                Hoffer SP 3380
-            </p>
-            <p>
-                Busch ProfiTalkie 2
-            </p>
-            <p>
-                MBO WT 446
-            </p>
-            <p>
-                DNT Space 100
-            </p>
-            <p>
-                ELRO WT 02
-            </p>
-            <p>
-                Reer 6000
-            </p>
-            <p>
-                Elro WT2
-            </p>
-            <p>
-                AEG Funky 1, AEG Funky 50
-            </p>
-            <h4>NUR VOX</h4>
-            <p>
-                Alan 441, 443, 451, 456, 456R
-            </p>
-            <p>
-                Albrecht Tectalk Action, Tectalk Contact, Multicom Pro
-            </p>
-            <p>
-                Stabo Flytalk, Freetalk UHF
-            </p>
-            <p>
-                Cobra MT 700 MT 900
-            </p>
-            <p>
-                KPO MT 2000L, MT 4000L, PB 1000R
-            </p>
-            <p>
-                DNT ProfiTek 77, XP 8, XLP 77, DRS 1000, Reer 5000, 5001, 5003, 5004
-            </p>
-            <div class="pmr-img-container">
-                <img src="./assets/img/welcherstecker 4.2 neu.gif" alt="">
-                <img src="./assets/img/welcherstecker 4.4.gif" alt="">
-            </div>
-
-            <h3>
-                Mikrofone mit 2,5mm Mono und 3,5mm Klinkenstecker
-            </h3>
-            <p>
-                Team PT-3208S(+baugleiche Geräte)
-            </p>
-            <p>
-                Stabo Freetalk-Pro
-            </p>
-            <p>
-                Kenwood FunKey UBZ-LH68 LPD, Kenwood FunKey UBZ-LJ8 PMR,<br> 
-                TK-3201 PMR, TK-3101 PMR, TK-261 Freenet
-            </p>
-            <p>
-                Bidatong BD PMR A und B, Bidatong BD-3107, Bidatong BD-2107
-            </p>
-
-            <div class="pmr-img-container">
-                <img src="./assets/img/welcherstecker 4.1 neu.gif" alt="">
-                <img src="./assets/img/welcherstecker 4.4.gif" alt="">
-            </div>
-
-            <div>
-                <a target="_blank" href="https://www.google.com/search?q=europafunker&rlz=1C1CHBF_deDE993DE993&oq=europafunker&aqs=chrome..69i57j0i13i512.615j0j4&sourceid=chrome&ie=UTF-8">
-                    <img class="europa-funk-img" src="./assets/img/welcherstecker 3 neu.gif" alt="">
-                </a>
-            </div>
-
 
 
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
