--- a/ts3-inst-hilfe.html
+++ b/ts3-inst-hilfe.html
@@ -21,6 +21,9 @@
 
         <div class="d-flex flex-wrap justify-center align-center column margin-top-30px margin-bottom-30px txt-center">
             <div class="w-50">
+                <h2 class="mobile-d-flex d-none">TeamSpeak Instalationshilfe Mobil nicht verfügbar</h2>
+            </div>
+            <div class="w-50 mobile-hide">
                 <p class="">
                     Wenn du nun den Clienten heruntergeladen hast, geht es an die Installation.
                     Wir empfehlen, TeamSpeak 3 mit den Standardeinstellungen zu installieren und nichts an der Installation zu verändern.
@@ -29,17 +32,17 @@
                     Wenn du nun TeamSpeak 3 erfolgreich installiert hast, führe es zuerst einmal aus. 
                     Jetzt meldet sich der Konfigurationsassistent von TeamSpeak 3.
                 </p>    
-                <img src="./assets/img/Assistent.png" alt="">
+                <img class="ts3img" src="./assets/img/Assistent.png" alt="">
                 <p class="margin-top-30px margin-bottom-30px txt-center">
                     Das erste Fenster kannst du mit "Weiter" bestätigen.
                 </p>
-                <img src="./assets/img/Assistent1.png" alt="">
+                <img class="ts3img" src="./assets/img/Assistent1.png" alt="">
                 <p class="margin-top-30px margin-bottom-30px txt-center">
                     Im zweiten Fenster kannst du deinen Nicknamen angeben.
                     Diesen Nicknamen kannst du selbstverständlich jederzeit ändern.
                     Dann bestätigst du per Klick auf "Weiter".
                 </p>
-                <img src="./assets/img/Assistent3.png" alt="">
+                <img class="ts3img" src="./assets/img/Assistent3.png" alt="">
                 <p class="margin-top-30px margin-bottom-30px txt-center">
                     Nun geht es an die Einstellung des Mikrofons. Du hast die Wahl ob man Push-To-Talk aktivieren möchtest
                     oder die Sprachaktivierung. Wir empfehlen letzteres, weil die Sprachaktivierung um einiges bequemer ist. 
@@ -47,13 +50,13 @@
                     Möchtest du jedoch Push-To-Talk verwenden, so kannst du hier eine zugehörige Taste zuweisen.
                     Zur Einstelllung der Empfindlichkeit der Sprachaktivierung klickt du dann auf "Weiter".
                 </p>
-                <img src="./assets/img/Assistent4.png" alt="">
+                <img class="ts3img" src="./assets/img/Assistent4.png" alt="">
 
             </div>
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable mobile-hide" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
