--- a/wellenausbreitung.html
+++ b/wellenausbreitung.html
@@ -36,7 +36,9 @@
                 </p>
             </div>    
             <div class="w-50">
-                <table>
+                <h2 class="mobile-d-flex d-none">Tabellen sind Mobil nicht verfügbar.<br>
+                    schau gerne in der Desktop Version vorbei</h2>
+                <table class="mobile-hide">
                     <thead>
                         <tr>
                             <th>Frequenzbereiche</th>
@@ -50,7 +52,7 @@
                 </table>
             </div>    
             <p>
-                <strong>
+                <strong class="mobile-hide">
                     Tab.: Darstellung der Frequenzbereiche
                 </strong>
             </p>
@@ -236,7 +238,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
