--- a/cb-bandplan11m.html
+++ b/cb-bandplan11m.html
@@ -21,10 +21,12 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>
+            <h2 class="mobile-hide">
                 CB-Funk Frequenzen
             </h2>
-            <div class="w-50 d-flex justify-center">
+            <h2 class="mobile-d-flex d-none font-size">Tabellen sind Mobil nicht verfügbar.<br>
+                schau gerne in der Desktop Version vorbei</h2>
+            <div class="w-50 d-flex justify-center mobile-hide">
                 <table>
                     <thead>
                         <tr>
@@ -40,7 +42,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
