--- a/freenet-bandplan.html
+++ b/freenet-bandplan.html
@@ -23,11 +23,23 @@
             <h2>Freenet 149 MHz</h2>
             <div class="d-flex column w-50 justify-center">
                 <p>
-                    Freenet ist ein Produktname der Firma Motorola und bezeichnet eine Jedermannfunkanwendung, die im Jahre 1996 auf Drängen der Firma Motorola in einem Teilbereich der freigewordenen Frequenzen des ehemaligen Mobilfunk-B-Netzes eingerichtet wurde.
-                    Für das Freenet waren ursprünglich nur drei Kanäle im 12,5 kHz Raster freigegeben. Im Januar 2007 wurde der Frequenzbereich um weitere drei Kanäle erweitert.
-                    Zugelassen sind ausschließlich Handfunkgeräte mit fest integrierter Antenne, wobei eine Strahlungsleistung von 500 mW ERP nicht überschritten werden darf. Damit sind Reichweiten von bis zu fünf Kilometer zu erzielen. Signaldämpfungen durch Hindernisse (Häuser, Bäume usw.) sind in diesem Frequenzbereich noch nicht so hoch wie bei den auf etwa dreimal so hohen Frequenzen arbeitenden Jedermannfunkanwendungen SRD und PMR446.
-                    Zielgruppe von Freenet sind vor allem semiprofessionelle Nutzer. Der relativ hohe Gerätepreis hat Privatnutzer größtenteils von dieser Funkanwendung ferngehalten. Es hat sich der Einsatz von Amateurfunkgeräten etabliert, die grundsätzlich gegen die Zulassungsbeschränkungen des Freenet verstoßen, und damit Messeinsätze der Bundesnetzagentur nach sich ziehen. Daher wird die Verwendung von echten Freenet-Geräten empfohlen.
-                    Um sich Neubelegungen des Frequenzbandes offen zu halten, hatte die Bundesnetzagentur die Nutzung ursprünglich bis Ende des Jahres 2005 befristet. Nach einer Verlängerung gilt die Frequenzzuteilung für Freenet jetzt bis zum 31. Dezember 2015. 
+                    Freenet ist ein Produktname der Firma Motorola und bezeichnet eine Jedermannfunkanwendung, die im Jahre 1996 auf Drängen
+                     der Firma Motorola in einem Teilbereich der 
+                    freigewordenen Frequenzen des ehemaligen Mobilfunk-B-Netzes eingerichtet wurde.
+                    Für das Freenet waren ursprünglich nur drei Kanäle im 12,5 kHz Raster freigegeben. Im Januar 2007 wurde der Frequenzbereich
+                     um weitere drei Kanäle erweitert.
+                    Zugelassen sind ausschließlich Handfunkgeräte mit fest integrierter Antenne, wobei eine Strahlungsleistung von 500 mW ERP 
+                    nicht überschritten werden darf.
+                     Damit sind Reichweiten von bis zu fünf Kilometer zu erzielen. Signaldämpfungen durch Hindernisse (Häuser, Bäume usw.) 
+                    sind in diesem Frequenzbereich noch nicht so hoch wie bei den auf etwa dreimal so hohen Frequenzen arbeitenden
+                     Jedermannfunkanwendungen SRD und PMR446.
+                    Zielgruppe von Freenet sind vor allem semiprofessionelle Nutzer. Der relativ hohe Gerätepreis hat Privatnutzer größtenteils von
+                     dieser Funkanwendung 
+                    ferngehalten. Es hat sich der Einsatz von Amateurfunkgeräten etabliert, die grundsätzlich gegen die Zulassungsbeschränkungen des
+                     Freenet verstoßen,
+                     und damit Messeinsätze der Bundesnetzagentur nach sich ziehen. Daher wird die Verwendung von echten Freenet-Geräten empfohlen.
+                    Um sich Neubelegungen des Frequenzbandes offen zu halten, hatte die Bundesnetzagentur die Nutzung ursprünglich bis Ende 
+                    des Jahres 2005 befristet. Nach einer Verlängerung gilt die Frequenzzuteilung für Freenet jetzt bis zum 31. Dezember 2015. 
                 </p>
                 <p>
                     <strong>
@@ -89,7 +101,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
