--- a/in-memorian.html
+++ b/in-memorian.html
@@ -20,9 +20,9 @@
 
     <div class="welcome-text txt-center"> 
         <div class="d-flex align-center justify-center">
-            <img src="./assets/img/candle.gif" alt="">
+            <img class="candle" src="./assets/img/candle.gif" alt="">
             <h2>Ruht in Frieden</h2>
-            <img src="./assets/img/candle.gif" alt="">
+            <img class="candle" src="./assets/img/candle.gif" alt="">
         </div> 
         <div class="d-flex justify-center">  
             <div class="w-50">
@@ -50,33 +50,33 @@
         </div>     
 
         <div class="d-flex justify-center align-center">
-                <img src="./assets/img/candle.gif" alt="">
-                <div>
-                    <img src="./assets/img/13ct-1.png" alt="">
+                <img class="candle mobile-hide" src="./assets/img/candle.gif" alt="">
+                <div class="w-50">
+                    <img class="w-50" class="ct13" src="./assets/img/13ct-1.png" alt="">
                     <h3>
                         13CT001 Pit (Eberhard) Borken NRW
                     </h3>
                 </div>
-                <img src="./assets/img/candle.gif" alt="">
+                <img class="candle mobile-hide" src="./assets/img/candle.gif" alt="">
 
         </div>   
         
         <div class="d-flex justify-center align-center">
-            <img src="./assets/img/candle.gif" alt="">
+            <img class="candle mobile-hide" src="./assets/img/candle.gif" alt="">
 
-            <div>
-                <img src="./assets/img/wolfgang-aus-weeze.png" alt="">
+            <div class="w-50"> 
+                <img class="w-50" src="./assets/img/wolfgang-aus-weeze.png" alt="">
                 <h3>
                     13CT1780 Wolfgang, Weeze NRW
                 </h3>
             </div>
-            <img src="./assets/img/candle.gif" alt="">
+            <img class="candle mobile-hide" src="./assets/img/candle.gif" alt="">
         </div>
 
     </div>
 
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        
     </div>
     <!--FOOTER-->
     <div w3-include-html="./assets/template/footer.html"></div>
