--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             SSTV 26.685 FM
         </p>
     </div>
-    <div class="d-flex justify-around align-center column-reverse margin-top-30px margin-bottom-30px">
+    <div class="d-flex justify-center align-center column-reverse margin-top-30px margin-bottom-30px">
 
         <div class="welcome-text w-50 txt-center">
             <p>
@@ -46,21 +46,21 @@
                 zu finden sind Deutschland oder auch Weltweit miteinander zu kommunizieren.
             </p>
         </div>
-        <img class="" src="./assets/img/georgeg-schwarz.gif" alt="">
+        <img class="radio-image" src="./assets/img/georgeg-schwarz.gif" alt="">
     </div>
 
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     <!--TEAMSPEAK-->
     <div class="teamspeak w-100 d-flex justify-around align-center margin-top-30px margin-bottom-30px">
-        <div class="w-50 d-flex justify-around">
+        <div class="w-50 d-flex align-center justify-around mobile-column">
             <img class="ts-img" src="./assets/img/Ts3.png" alt="">
             <h2>
                 TEAMSPEAK 3
             </h2>
-            <img class="ts-img" src="./assets/img/Ts3.png" alt="">
+            <img class="ts-img mobile-hide-425px" src="./assets/img/Ts3.png" alt="">
         </div>    
     </div>
     <div class="welcome-text d-flex justify-center">
@@ -73,7 +73,7 @@
         </div>    
     </div>
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
     <!--contact-->
     <div class="contact d-flex column txt-center align-center">
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+       
     </div>
     <!--Footer-->
     <div w3-include-html="./assets/template/footer.html"></div>
