--- a/mitglieder-liste.html
+++ b/mitglieder-liste.html
@@ -24,21 +24,20 @@
     <div w3-include-html="./assets/template/header.html"></div>  
     <!--member content-->
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
     </div>
     <div class="member-List">
         <div class="d-flex column w-100 justify-center align-center margin-bottom-30px">
-            <h2>Mitgliederliste</h2>
-            <p class="txt-center">
-                Mitgliederliste, CT-Kürzel nach Ländern<br>
-                Klicke auf die Länder für weitere Informationen
-            </p>
+            <div class="w-50 txt-center">
+                <p>
+                    Mitgliederliste, CT-Kürzel nach Ländern<br>
+                    Klicke auf die Länder für weitere Informationen
+                </p>
+            </div>    
         </div>
-        <div id="allMemberList"></div>
+        <div class="mobile-hide" id="allMemberList"></div>
     </div>
 
     <div class="d-flex w-100 justify-center  margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     <!--Footer-->
