--- a/neues-mitglied.html
+++ b/neues-mitglied.html
@@ -20,7 +20,7 @@
     <div w3-include-html="./assets/template/header.html"></div>  
 
 <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-    <img src="./assets/img/kodax-02.gif" alt="">
+    <img class="cable" src="./assets/img/kodax-02.gif" alt="">
 </div>
 
 <div class="welcome-text d-flex justify-center txt-center">
@@ -117,7 +117,7 @@
     </div>    
 
 <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-    <img src="./assets/img/kodax-02.gif" alt="">
+    
 </div>
 
 <!--Footer-->
