--- a/pr-betriebsarten.html
+++ b/pr-betriebsarten.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body onload="initFrequenzList()" class="bg-page">
+<body onload="initPrBetriebsart()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -21,7 +21,6 @@
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
             <div class="w-50">
-                <h2>Diese Betriebsarten gibt es</h2>
                 <p>
                     Es sind zwei Modulationsverfahren gebräuchlich: FSK und AFSK.
                 </p>
@@ -189,7 +188,7 @@
             </div>  
         </div>    
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
