--- a/pr-geschichte.html
+++ b/pr-geschichte.html
@@ -132,7 +132,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
