--- a/was-ist-pmr.html
+++ b/was-ist-pmr.html
@@ -108,7 +108,7 @@
                         Ideal sind Quarzgesteuerte Geräte, die hervorragend kurze Sende/Empfangs-Umschaltzeiten besitzen. 
                         1200 Baud AFSK ist auch die im CB-Funk übliche Betriebsart.
                     </p>
-                    <img src="./assets/img/CBfunke2 (1).gif" alt="">
+                    <img class="radioIMG" src="./assets/img/CBfunke2 (1).gif" alt="">
                 </div>
                 <div>    
                     <p>
@@ -122,7 +122,7 @@
                         oder Amiga anschließen. Für alle diese Rechner sind Terminalprogramme verfügbar, mit denen man sehr komfortabel Daten 
                         senden und empfangen kann.
                     </p>
-                    <img src="./assets/img/RTEmagicC_computer_gif.gif" alt="">
+                    <img class="pc" src="./assets/img/RTEmagicC_computer_gif.gif" alt="">
                 </div> 
                 <div>
                     <p>
@@ -141,7 +141,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
